--- a/src/css/imports/nav.css
+++ b/src/css/imports/nav.css
@@ -2,8 +2,6 @@
 Top Nav
 --------------------------------------------------------------*/
 nav {
-    /* max-width: 800px;
-    margin: 0 auto; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -26,6 +24,25 @@ nav {
             & a {
                 padding: 1px 2px;
                 font-weight: 700;
+                text-decoration: none;
+                color: black;
+                background: linear-gradient(to top, transparent 25%),
+                            linear-gradient(to top,var(--teal) 25%,transparent 25%);
+                &:hover {
+                    cursor: pointer;
+                        color: white;
+                        background: var(--slate);
+                }
+            }
+            & .current-page {
+                background: linear-gradient(to top, transparent 25%),
+                            linear-gradient(to top,var(--slate) 25%,transparent 25%);
+                &:before {
+                    content: ">";
+                }
+                &:after {
+                    content: "<";
+                }
             }
         }
     }
