--- a/src/css/imports/typography.css
+++ b/src/css/imports/typography.css
@@ -41,7 +41,24 @@ a {
 }
 
 pre, xmp, plaintext, listing {
-    white-space: pre-wrap;
+    display: block;
+    word-wrap: break-word;
+    overflow: auto;
+}
+
+pre {
+    margin-top: 0;
+    margin-bottom: 1em;
+    padding: 1em;
+    background-color: var(--gray);
+    font-size: 85%;
+    line-height: 1.45;
+    & code {
+        display: block;
+        word-break: normal;
+        word-wrap: break-word;
+        overflow: auto;
+    }
 }
 
 ::selection {
